--- a/requirements.txt
+++ b/requirements.txt
@@ -1,81 +1,115 @@
+absl-py==2.1.0
 altair==5.5.0
 annotated-types==0.7.0
 anyio==4.9.0
+astunparse==1.6.3
 attrs==25.3.0
 blinker==1.9.0
 cachetools==5.5.2
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
-contourpy==1.3.0
+contourpy==1.3.1
+control==0.10.1
 cycler==0.12.1
 dnspython==2.7.0
 email_validator==2.2.0
-exceptiongroup==1.2.2
 fastapi==0.115.12
 fastapi-cli==0.0.7
+filelock==3.13.1
+flatbuffers==25.2.10
 fonttools==4.56.0
+fsspec==2024.6.1
 future==1.0.0
+gast==0.6.0
 gitdb==4.0.12
 GitPython==3.1.44
-h11==0.14.0
-httpcore==1.0.7
+google-pasta==0.2.0
+grpcio==1.70.0
+h11==0.16.0
+h5py==3.12.1
+httpcore==1.0.9
 httptools==0.6.4
 httpx==0.28.1
 idna==3.10
-importlib_resources==6.5.2
 iso8601==2.1.0
 Jinja2==3.1.6
+joblib==1.4.2
 jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-kiwisolver==1.4.7
+jsonschema-specifications==2025.4.1
+keras==3.8.0
+kiwisolver==1.4.8
+libclang==18.1.1
+Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
-matplotlib==3.9.4
+matplotlib==3.10.0
 mdurl==0.1.2
-narwhals==1.33.0
+ml-dtypes==0.4.1
+mpmath==1.3.0
+namex==0.0.8
+narwhals==1.37.1
+networkx==3.3
 numpy==2.0.2
+opt_einsum==3.4.0
+optree==0.14.0
 packaging==24.2
 pandas==2.2.3
-pillow==11.2.0
-protobuf==5.29.4
-pyarrow==19.0.1
-pydantic==2.11.1
-pydantic_core==2.33.0
+pillow==11.1.0
+protobuf==5.29.3
+pyarrow==20.0.0
+pydantic==2.11.4
+pydantic_core==2.33.2
 pydeck==0.9.1
 Pygments==2.19.1
-pyparsing==3.2.3
+pyparsing==3.2.1
+PyQt5==5.15.11
+PyQt5-Qt5==5.15.16
+PyQt5_sip==12.17.0
 pyserial==3.5
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 python-multipart==0.0.20
-pytz==2025.2
+pytz==2025.1
 PyYAML==6.0.2
 referencing==0.36.2
 requests==2.32.3
-rich==14.0.0
-rich-toolkit==0.14.1
+rich==13.9.4
+rich-toolkit==0.14.4
 rpds-py==0.24.0
-scipy==1.13.1
+scikit-learn==1.6.1
+scipy==1.15.1
 serial==0.0.97
+setuptools==75.8.0
 shellingham==1.5.4
 simple-pid==2.0.1
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
-starlette==0.46.1
-streamlit==1.44.1
-tenacity==9.0.0
+starlette==0.46.2
+streamlit==1.45.0
+sympy==1.13.3
+tenacity==9.1.2
+tensorboard==2.18.0
+tensorboard-data-server==0.7.2
+tensorflow==2.18.0
+termcolor==2.5.0
+threadpoolctl==3.5.0
 toml==0.10.2
+torch==2.7.0+cpu
+torchaudio==2.7.0+cpu
+torchvision==0.22.0+cpu
 tornado==6.4.2
-typer==0.15.2
+typer==0.15.3
 typing-inspection==0.4.0
-typing_extensions==4.13.0
-tzdata==2025.2
+typing_extensions==4.12.2
+tzdata==2025.1
 urllib3==2.3.0
-uvicorn==0.34.0
+uvicorn==0.34.2
 uvloop==0.21.0
 watchdog==6.0.0
-watchfiles==1.0.4
+watchfiles==1.0.5
 websockets==15.0.1
-zipp==3.21.0
+Werkzeug==3.1.3
+wheel==0.45.1
+wrapt==1.17.2
